app/frontend/foundation.scss
@import "@/breakpoints";

*,
::before,
::after,
::placeholder {
  box-sizing: inherit;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;

  // @media (prefers-color-scheme: dark) {
  // -webkit-font-smoothing: initial;
  // -moz-osx-font-smoothing: initial;
  // }
}

html {
  min-height: 100vh;

  @include small {
    overflow-x: hidden;
  }
}

body {
  box-sizing: border-box;
  min-height: 100vh;
  background-color: $pearl;

  @include small {
    overflow-x: hidden;
  }
}

img,
svg {
  vertical-align: bottom;
}

